# eSaiph

./: .gitignore  .gitmodules  docker-compose.yml  main.py  pyproject.toml  requirements.txt  resource_monitor.py
esaiph/: __init__.py  cli.py
esaiph/core/: __init__.py  analyzer.py  collector.py  logger_config.py  models.py  recorder.py
esaiph/gui/: __init__.py  app.py  theme.py
esaiph/gui/components/: donut_chart.py  gauge_widget.py  live_chart.py  metric_card.py  session_card.py  sparkline.py  status_badge.py
esaiph/gui/views/: __init__.py  logs_view.py  record_view.py  settings_view.py
